added layout 404, 500, login, registration

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,5 +1,15 @@
+:root {
+    --title-black: #1E1E1E;
+    --button-back-chat: #3369F3;
+    --common-button: #3369F3;
+    --text-color: #FBFBFB;
+
+    --border-radius-button: 8px;
+}
+body {
+    font-family: 'Inter', sans-serif;
+}
 .main {
     width: 100%;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto;
 }
