--- a/src/layouts/layouts.hbs
+++ b/src/layouts/layouts.hbs
@@ -10,5 +10,10 @@
         </head>
         <body>
             {{#block 'main'}}{{/block}}
+            {{#block "scripts"}}
+            {{#each scripts}}
+                <script defer src="{{this}}"></script>
+            {{/each}}
+            {{/block}}
         </body>
     </html> 
