--- a/src/pages/login.hbs
+++ b/src/pages/login.hbs
@@ -1,7 +1,26 @@
+---
+title: Вход
+style:
+- ../components/css/button.css
+- ./css/login.css
+- ../components/css/input.css
+---
+
 {{#extend 'layouts'}}
     {{#content 'main'}}
-        <div>
-            Логин
+        <div class="page-login">
+            <div class="">
+                <div class=""><h1>{{ title }}</h1></div>
+                <div class="">
+                    {{#each login.inputData}}
+                        {{> input label = this.title name = this.name type = this.type }}
+                    {{/each}}
+                </div>
+                <div class="">
+                    {{> button text = "Авторизоваться" currentStyle = "" href = "chat.hbs"}}
+                    <a href="signUp.hbs">Нет аккаунта?</a>
+                </div>
+            </div>
         </div>
     {{/content}}
 {{/extend}}
