--- a/src/pages/signUp.hbs
+++ b/src/pages/signUp.hbs
@@ -1,7 +1,26 @@
+---
+title: Регистрация
+style:
+- ../components/css/button.css
+- ./css/signUp.css
+- ../components/css/input.css
+---
+
 {{#extend 'layouts'}}
     {{#content 'main'}}
-        <div>
-            Регистрация
+        <div class="page-registration">
+            <div class="">
+                <div class=""><h1>{{ title }}</h1></div>
+                <div class="">
+                    {{#each signUp.inputData}}
+                        {{> input label = this.title name = this.name type = this.type }}
+                    {{/each}}
+                </div>
+                <div class="">
+                    {{> button text = "Зарегистрироваться" currentStyle = ""}}
+                    <a href="login.hbs">Вход</a>
+                </div>
+            </div>
         </div>
     {{/content}}
 {{/extend}}
