--- a/src/components/css/button.css
+++ b/src/components/css/button.css
@@ -4,4 +4,20 @@
     border-radius: var(--border-radius-button);
     border: none;
     cursor: pointer;
+    height: 40px;
+    line-height: 35px;
+    width: 85%;
+}
+
+.button-login {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.login-link {
+    cursor: pointer;
+    font-size: 12px;
+    line-height: 12px;
+    text-decoration: none;
+    text-align: center;
 }
