--- a/src/components/input.hbs
+++ b/src/components/input.hbs
@@ -1,6 +1,6 @@
-<div class="">
-    <div class="">
+<div class="input-outside">
+    <div class="input-label">
         {{ label }}
     </div>
-    <input type="{{ type }}" name="{{ name }}" class="form-input-input"></input>
+    <input type="{{ type }}" name="{{ name }}" class="input-inside"></input>
 </div>
