--- a/src/pages/css/login.css
+++ b/src/pages/css/login.css
@@ -1,6 +1,29 @@
 .page-login {
     height: 100%;
+    top: 4rem;
+    box-shadow: 0px 0px 5px rgb(0 0 0 / 20%);
+    border-radius: 15px;
+    max-width: 350px;
+    margin: 0 auto;
+    position: relative;
+}
+.page-login-content {
+    padding: 15px 15px;
+}
+.page-login-title {
+    margin-top: 15px;
+    font-size: 12px;
+    line-height: 20px;
+    color: var(--title-black);
+    font-weight: 500;
+    text-align: center;
+}
+.page-login-inputData {
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+.field-buttons {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
 }
