--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -3,6 +3,8 @@
     --button-back-chat: #3369F3;
     --common-button: #3369F3;
     --text-color: #FBFBFB;
+    --color-gray: #999999;
+    --input-blue: #3369F3;
 
     --border-radius-button: 8px;
 }
