layout profile page

--- a/src/components/userAvatar.hbs
+++ b/src/components/userAvatar.hbs
@@ -1,10 +1,5 @@
-<div class="">
-    <div class="">
-                <div>
-                    <img class="image-back" src="../../public/images/defaultAvatar.png" alt="Аватар"/>
-                </div>
-            </div>
-    <span class="">
-           Alex 
-    </span>
+<div>
+    <div class="avatar-block">
+        <img class="photo-user" src="../../public/images/defaultAvatar.png" alt="Аватар"/>
+    </div>
 </div>
