--- a/src/pages/404.hbs
+++ b/src/pages/404.hbs
@@ -9,7 +9,7 @@ style:
             <div class="page-404-content">
                 <div  class="page-404-title">404</div>
                 <div class="page-404-text">Не туда попали</div>
-                <a  class="page-404-back-chat" href="index.hbs"> <span>Назад к чатам</span></a>
+                <a class="page-404-back-chat" href="index.hbs">Назад к чатам</a>
             </div>
         </div>
     {{/content}}
