--- a/src/pages/css/index.css
+++ b/src/pages/css/index.css
@@ -5,6 +5,8 @@
     --text-color: #FBFBFB;
     --color-gray: #999999;
     --input-blue: #3369F3;
+    --border-gray-profile-input: #EAEAEA;
+    --button-red: #FF0000;
 
     --border-radius-button: 8px;
 }
