--- a/src/layouts/layouts.hbs
+++ b/src/layouts/layouts.hbs
@@ -6,7 +6,7 @@
                     <link rel="stylesheet" href="{{this}}">
                 {{/each}}
             {{/block}}
-            <link rel="stylesheet" href="../pages/index.css">
+            <link rel="stylesheet" href="../pages/css/index.css">
         </head>
         <body>
             {{#block 'main'}}{{/block}}
