--- a/src/pages/500.hbs
+++ b/src/pages/500.hbs
@@ -9,7 +9,7 @@ style:
             <div class="page-500-content">
                 <div  class="page-500-title">500</div>
                 <div class="page-500-text">Мы уже фиксим</div>
-                <a  class="page-500-back-chat" href="index.hbs"> <span>Назад к чатам</span></a>
+                <a class="page-500-back-chat" href="index.hbs">Назад к чатам</a>
             </div>
         </div>
     {{/content}}
