--- a/src/pages/css/profile.css
+++ b/src/pages/css/profile.css
@@ -1,3 +1,74 @@
 .image-back {
-    width: 10%;
+    width: 60%;
+}
+.image-back-block {
+    width: 3%;
+    left: 0;
+    overflow: hidden;
+    position: fixed;
+    height: 100%;
+    line-height: 35;
+    padding-left: 10px;
+    background: #FBFBFB;
+}
+
+.profile-data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profile-avatar {
+    margin-top: 30px;
+}
+
+.profile-name {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 16px;
+    margin: 1rem;
+}
+
+.profile-button {
+    width: 580px;
+    border-bottom: 1px solid var(--border-gray-profile-input);
+    display: flex;
+    text-decoration: none;
+    align-items: center;
+    padding: 10px;
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--input-blue);
+    line-height: 13px;
+}
+.profile-button:last-child {
+    color: var(--button-red);
+}
+
+.profile-page-field {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid var(--border-gray-profile-input);
+}
+
+.buttons-field {
+    margin-top: 40px;
+}
+
+.profile-page-input {
+    height: 30px;
+    width: 500px;
+    outline: none;
+    border: none;
+    padding: 0 10px 10px;
+    text-align: end;
+}
+
+.profile-page-label {
+    font-size: 14px;
+}
+
+.profile-page-block-input {
+    padding-left: 10px;
 }
