--- a/src/pages/profile.hbs
+++ b/src/pages/profile.hbs
@@ -9,21 +9,31 @@ style:
 {{#extend 'layouts'}}
     {{#content 'main'}}
         <div>
-            <div class="">
+            <div class="image-back-block">
                 <a href="./chat.hbs">
                     <img class="image-back" src="../../public/images/back.jpg" alt="Назад к чатам"/>
                 </a>
             </div>
-            <div class="">
-                {{> userAvatar}}
-            </div>
-            <div class="">
-                {{> userProfile}}
-            </div>
-            <div class="">
-                <a class="" href="#1">Изменить данные</a>
-                <a class="" href="#2">Изменить пароль</a>
-                <a class="" href="#3">Изменить выйти</a>
+            <div class="profile-data">
+                <div class="profile-avatar">
+                    {{> userAvatar}}
+                </div>
+                <div class="profile-name">Alex</div>
+                <div class="profile-page-block-input">
+                        {{#each profile.inputData}}
+                            <div class="profile-page-field">
+                                <div class="profile-page-label">
+                                    {{ this.title }}
+                                </div>
+                                <input class="profile-page-input" name="{{ this.name }}" placeholder="{{ this.value }}" />
+                            </div>
+                        {{/each}}
+                </div>
+                <div class="buttons-field">
+                    <a class="profile-button" href="#1">Изменить данные</a>
+                    <a class="profile-button" href="#2">Изменить пароль</a>
+                    <a class="profile-button" href="#3">Выйти</a>
+                </div>
             </div>
         </div>
     {{/content}}
