add folder public for images and fonts, corrected typos and types variables

--- a/src/components/message/message.css
+++ b/src/components/message/message.css
@@ -60,7 +60,7 @@
     display: inline-block;
     width: 10px;
     height: 4px;
-    background-image: url("../../image/isRead.svg");
+    background-image: url("../../../public/image/isRead.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -74,7 +74,7 @@
     display: inline-block;
     width: 10px;
     height: 4px;
-    background-image: url("../../image/isNotRead.svg");
+    background-image: url("../../../public/image/isNotRead.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
