--- a/src/variables/colors.css
+++ b/src/variables/colors.css
@@ -7,6 +7,7 @@
   --color-grey: #999;
   --color-light-grey: #efefef;
   --color-line: #eaeaea;
+  --color-success: #4e9a51;
   --color-dark-line: #e5e5e5;
   --color-bg-list: #fbfbfb;
   --color-menu-btn: #f5f5f5;
