change btnProfile component

--- a/src/components/btnProfile/btnProfile.css
+++ b/src/components/btnProfile/btnProfile.css
@@ -12,7 +12,10 @@
   }
 
   &__link {
-    text-decoration: none;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    padding: 0;
     display: inline-block;
     font-size: 13px;
     font-weight: 500;
@@ -30,5 +33,20 @@
 
   &__link_color_blue {
     color: var(--color-secondary);
+  }
+
+  &__btn {
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 13px;
+    transition: 0.3s opacity;
+  }
+
+  &__btn:hover {
+    opacity: 0.7;
   }
 }
