--- a/src/components/error/error.css
+++ b/src/components/error/error.css
@@ -8,7 +8,7 @@
   &__title {
     margin: 0;
     font-size: 40px;
-    color: var(--color-text);
+    color: var(--color-primaty);
     font-weight: 500;
     line-height: 40px;
     margin-bottom: 20px;
@@ -17,7 +17,7 @@
   &__subtitle {
     margin: 0;
     font-size: 20px;
-    color: var(--color-text);
+    color: var(--color-primaty);
     font-weight: 500;
     line-height: 20px;
     text-align: center;
@@ -26,7 +26,9 @@
   }
 
   &__link {
-    text-decoration: none;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
     font-size: 11px;
     color: var(--color-secondary);
     font-weight: 500;
