--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -26,7 +26,7 @@
     border-bottom: 1px solid var(--color-secondary);
     padding-bottom: 7px;
     font-size: 13px;
-    color: var(--color-text);
+    color: var(--color-primaty);
     font-weight: 500;
     line-height: 13px;
     margin-bottom: 7px;
