--- a/src/components/inputFile/inputFile.css
+++ b/src/components/inputFile/inputFile.css
@@ -1,7 +1,13 @@
 .input-file {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 45px;
+
+  &:hover {
+    opacity: 0.8;
+  }
 
   &__input {
     display: none;
@@ -16,10 +22,5 @@
     font-weight: 500;
     line-height: 16px;
     text-align: center;
-    margin-bottom: 45px;
-  }
-
-  &__span:hover {
-    opacity: 0.8;
   }
 }
