--- a/src/components/inputProfileWrapper/inputProfileWrapper.css
+++ b/src/components/inputProfileWrapper/inputProfileWrapper.css
@@ -21,7 +21,7 @@
     left: 0;
     transform: translateY(-50%);
     font-size: 13px;
-    color: var(--color-text);
+    color: var(--color-primaty);
     font-weight: 500;
     line-height: 13px;
   }
