--- a/src/components/listItem/listItem.css
+++ b/src/components/listItem/listItem.css
@@ -3,6 +3,10 @@
   transition: 0.3s background-color;
   text-align: left;
 
+  &_is-active {
+    background-color: var(--color-light-blue);
+  }
+
   &:hover {
     cursor: pointer;
     background-color: var(--color-light-blue);
@@ -22,10 +26,10 @@
   &__user-name {
     margin: 0;
     font-size: 13px;
-    color: var(--color-text);
+    color: var(--color-primaty);
     font-weight: 600;
     line-height: 13px;
-    margin-bottom: 4px;
+    margin-bottom: 6px;
   }
 
   &__message {
@@ -38,7 +42,7 @@
   }
 
   &__message_bold {
-    color: var(--color-text);
+    color: var(--color-primaty);
     margin-right: 3px;
   }
 
@@ -68,12 +72,20 @@
     color: var(--color-third);
     font-weight: 500;
     line-height: 12px;
-    padding: 4px 6px;
+    padding: 4px 7px;
     background-color: var(--color-secondary);
     border-radius: 50%;
   }
 
   &__count-message_is-show {
     display: block;
+  }
+
+  &__plug-avatar {
+    margin-right: 10px;
+    width: 47px;
+    height: 47px;
+    border-radius: 50%;
+    background-color: var(--color-light-grey);
   }
 }
