--- a/src/components/searchChat/searchChat.css
+++ b/src/components/searchChat/searchChat.css
@@ -1,16 +1,58 @@
 .search-chat {
   font-family: inherit;
+  display: grid;
+  grid-template-columns: 1fr 28px;
+  align-items: center;
+  gap: 10px;
 
   &__label {
     position: relative;
     display: block;
+    width: 100%;
   }
 
   &__img {
     cursor: text;
     position: absolute;
     top: 50%;
-    left: 38%;
+    left: 36%;
     transform: translateY(-50%);
+  }
+
+  &__btn {
+    position: relative;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    min-width: 28px;
+    height: 28px;
+    background-color: var(--color-secondary);
+    transition: 0.3s opacity;
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 50%;
+      height: 2px;
+      background-color: var(--color-third);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 2px;
+      height: 50%;
+      background-color: var(--color-third);
+    }
   }
 }
