--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -21,7 +21,7 @@
   &__user-name {
     margin: 0;
     font-size: 16px;
-    color: var(--color-text);
+    color: var(--color-primaty);
     font-weight: 600;
     line-height: 16px;
     text-align: center;
@@ -32,6 +32,12 @@
     margin: 0;
     padding: 0;
     margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+
+    & button {
+      align-self: center;
+    }
   }
 
   &__list:last-of-type {
