--- a/src/components/userItem/userItem.css
+++ b/src/components/userItem/userItem.css
@@ -16,7 +16,7 @@
   &__text-login {
     margin: 0;
     font-size: 16px;
-    color: var(--color-primaty);
+    color: var(--color-text);
     font-weight: 500;
     line-height: 20px;
   }
@@ -24,7 +24,7 @@
   &__text-email {
     margin: 0;
     font-size: 12px;
-    color: var(--color-primaty);
+    color: var(--color-text);
     font-weight: 400;
     line-height: 16px;
   }
@@ -38,7 +38,7 @@
   &__role {
     margin: 0;
     font-size: 11px;
-    color: var(--color-primaty);
+    color: var(--color-text);
     font-weight: 400;
     line-height: 16px;
   }
@@ -52,7 +52,7 @@
     margin-left: auto;
     margin-right: 7px;
     font-size: 20px;
-    color: var(--color-primaty);
+    color: var(--color-text);
     font-weight: 500;
     width: 27px;
     transition: 0.3s background-color, 0.3s color;
