--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -70,7 +70,7 @@
   &__user-name {
     margin: 0;
     font-size: 13px;
-    color: var(--color-primaty);
+    color: var(--color-text);
     font-weight: 600;
     line-height: 13px;
   }
